# other_study

./: README.md
AOJ/: README.md
AOJ/Book/: README.md
Book/2_Introduction/: ALDS1_1_D_Maximum_Profit.cpp
Book/3_primary_sort/: ALDS1_2_A_Bubble_Sort.cpp  ALDS1_2_B_Selection_Sort.py  ALDS1_2_C_Stable_Sort.cpp  ALDS_1_1_A_Insertion_Sort.py
Book/4_data_structures/: ALDS1_3_B_Queue.py  (+2 more)
CPP_INTRO/: 10_pointer.cpp  11_pointer_array.cpp  12_pass_by_ref.cpp  13_getBmi_st.cpp  13_struct.cpp  13_struct.h  14_exsisting_class.cpp  15_HealthChecker.cpp  15_HealthChecker.h  15_HealthChecker_main.cpp  16_constdest.cpp  17_dynamic_constdest.cpp  18_counter_without_class.cpp  19_Counter.cpp  19_Counter.h  19_Counter_main.cpp  20_Account.cpp  20_Account.h  20_Account_main.cpp  21_CounterEx.cpp  21_CounterEx.h  21_CounterEx_main.cpp  22_AccountEx.cpp  22_AccountEx.h  22_AccountEx_main.cpp  23_GenderCounterBoard.cpp  24_polymor.cpp  25_polymor_generalize.cpp  26_override.cpp  27_overload.cpp  28_overload_class.cpp  29_overload_constructor.cpp  2_bmi.cpp  30_default_arg.cpp  31_same_mean.cpp  32_Point.cpp  32_Point.h  32_Point_main.cpp  33_copy_constructor.cpp  34_need_copy_constructor.cpp  (+40 more)
Flask/: README.md
HTML/: README.md  images.json  index.html  index2.html  index3.html  index4.html  index5.html  index6.html  index7.html  index8.html  index9.html
ROS2/: Dockerfile  README.md  pub_image.py  sub_image.py
ROS2/cpp_pubsub/: CMakeLists.txt  package.xml
ROS2/cpp_pubsub/src/: pub_image.cpp  sub_image.cpp
Web_Javascript/: README.md
get-ticket/: README.md  main.py
(+148 files in other folders)
